fix SignedPetition